--- a/AHQ/Base.lproj/Main.storyboard
+++ b/AHQ/Base.lproj/Main.storyboard
@@ -139,10 +139,10 @@
             </objects>
             <point key="canvasLocation" x="622" y="1799"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Tab Bar View Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
+                <tabBarController id="49e-Tb-3d3" customClass="TabBarViewController" customModule="AHQ" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -251,21 +251,6 @@
             </objects>
             <point key="canvasLocation" x="-196" y="2515"/>
         </scene>
-        <!--Recent View Controller-->
-        <scene sceneID="Pdi-5i-rKX">
-            <objects>
-                <viewController storyboardIdentifier="RecentViewController" id="gHA-JP-wtT" customClass="RecentViewController" customModule="AHQ" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ZIl-C2-eav">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="Oyf-3N-4WP"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="AUq-qg-SpK" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="622" y="2515"/>
-        </scene>
         <!--Bio View Controller-->
         <scene sceneID="7Cs-nf-yRB">
             <objects>
@@ -273,13 +258,112 @@
                     <view key="view" contentMode="scaleToFill" id="MN1-Ec-7Gn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6bt-IX-EXt">
+                                <rect key="frame" x="0.0" y="44" width="375" height="250"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MUK-UH-4pp">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="250"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rxc-gN-2n6">
+                                                <rect key="frame" x="8" y="115" width="3342" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <string key="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="600" id="re7-rY-FhE"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="MUK-UH-4pp" secondAttribute="bottom" id="3nx-de-xsd"/>
+                                    <constraint firstAttribute="trailing" secondItem="MUK-UH-4pp" secondAttribute="trailing" id="HIx-53-jCa"/>
+                                    <constraint firstItem="MUK-UH-4pp" firstAttribute="height" secondItem="6bt-IX-EXt" secondAttribute="height" id="hhz-Ux-AkD"/>
+                                    <constraint firstItem="MUK-UH-4pp" firstAttribute="top" secondItem="6bt-IX-EXt" secondAttribute="top" id="kjh-8K-Ibh"/>
+                                    <constraint firstAttribute="height" constant="250" id="niN-gE-DJf"/>
+                                    <constraint firstItem="MUK-UH-4pp" firstAttribute="leading" secondItem="6bt-IX-EXt" secondAttribute="leading" id="sIQ-Ye-AQZ"/>
+                                </constraints>
+                            </scrollView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="a42-58-Y5R">
+                                <rect key="frame" x="0.0" y="294" width="375" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="C0J-Qi-pnR"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dLg-b6-jyS">
+                                <rect key="frame" x="0.0" y="350" width="375" height="462"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xUq-oE-S57">
+                                    <size key="itemSize" width="150" height="150"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="profileFuncCell" id="qwR-Ai-cfA" customClass="ProfileCollectionViewCell" customModule="AHQ" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ELU-ON-eSM">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggI-Ss-jCl">
+                                                    <rect key="frame" x="23" y="60" width="104" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                    <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="ELU-ON-eSM" firstAttribute="top" secondItem="qwR-Ai-cfA" secondAttribute="top" id="5ps-l3-IMP"/>
+                                            <constraint firstItem="ELU-ON-eSM" firstAttribute="leading" secondItem="qwR-Ai-cfA" secondAttribute="leading" id="5tz-Lh-nif"/>
+                                            <constraint firstItem="ggI-Ss-jCl" firstAttribute="centerY" secondItem="qwR-Ai-cfA" secondAttribute="centerY" id="AXp-iH-LE4"/>
+                                            <constraint firstItem="ggI-Ss-jCl" firstAttribute="centerX" secondItem="qwR-Ai-cfA" secondAttribute="centerX" id="WR8-Tj-c5z"/>
+                                            <constraint firstItem="ggI-Ss-jCl" firstAttribute="leading" secondItem="qwR-Ai-cfA" secondAttribute="leadingMargin" constant="15" id="e2f-bg-POV"/>
+                                            <constraint firstAttribute="bottom" secondItem="ELU-ON-eSM" secondAttribute="bottom" id="hl9-cg-oy6"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="ggI-Ss-jCl" secondAttribute="trailing" constant="15" id="hoJ-F9-BGJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="ELU-ON-eSM" secondAttribute="trailing" id="sZ5-3J-IIX"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="funcName" destination="ggI-Ss-jCl" id="sHB-9m-zDf"/>
+                                            <outlet property="image" destination="ELU-ON-eSM" id="v5X-mT-Egj"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="fha-QH-F14" firstAttribute="trailing" secondItem="dLg-b6-jyS" secondAttribute="trailing" id="09A-0P-PS6"/>
+                            <constraint firstItem="dLg-b6-jyS" firstAttribute="leading" secondItem="fha-QH-F14" secondAttribute="leading" id="5Rg-pw-kYK"/>
+                            <constraint firstItem="6bt-IX-EXt" firstAttribute="top" secondItem="fha-QH-F14" secondAttribute="top" id="7KG-kB-dwO"/>
+                            <constraint firstAttribute="bottom" secondItem="dLg-b6-jyS" secondAttribute="bottom" id="CMF-hq-3Lb"/>
+                            <constraint firstItem="a42-58-Y5R" firstAttribute="top" secondItem="6bt-IX-EXt" secondAttribute="bottom" id="FVZ-T9-h3G"/>
+                            <constraint firstItem="6bt-IX-EXt" firstAttribute="leading" secondItem="fha-QH-F14" secondAttribute="leading" id="J0V-kZ-FH0"/>
+                            <constraint firstItem="dLg-b6-jyS" firstAttribute="top" secondItem="a42-58-Y5R" secondAttribute="bottom" id="YAP-B7-q84"/>
+                            <constraint firstItem="a42-58-Y5R" firstAttribute="leading" secondItem="MN1-Ec-7Gn" secondAttribute="leading" id="aFb-k3-heH"/>
+                            <constraint firstItem="fha-QH-F14" firstAttribute="trailing" secondItem="6bt-IX-EXt" secondAttribute="trailing" id="h1J-Rg-Uhk"/>
+                            <constraint firstItem="fha-QH-F14" firstAttribute="trailing" secondItem="a42-58-Y5R" secondAttribute="trailing" id="hQT-zN-vU0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="fha-QH-F14"/>
                     </view>
+                    <connections>
+                        <outlet property="funcCollectionView" destination="dLg-b6-jyS" id="LI5-SB-uVJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="avv-ZT-Xi4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1267" y="2513"/>
+            <point key="canvasLocation" x="1266.4000000000001" y="2512.3152709359606"/>
         </scene>
         <!--Goal View Controller-->
         <scene sceneID="jdH-Zb-4Hc">
@@ -294,7 +378,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H0Q-Tc-NqC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1910" y="2511"/>
+            <point key="canvasLocation" x="1266" y="3179"/>
         </scene>
         <!--Focus View Controller-->
         <scene sceneID="QdT-fn-6xk">
@@ -309,7 +393,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rvQ-p4-wyu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2548" y="2512"/>
+            <point key="canvasLocation" x="1266" y="3831"/>
         </scene>
         <!--Feed View Controller-->
         <scene sceneID="bb4-dj-ESG">
@@ -318,7 +402,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="fkv-WF-0g5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0pT-Q4-zkv">
                             <size key="itemSize" width="360" height="200"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
